--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1>Rishi's Portfolio</h1>
     <h2>I'm a Web developer</h2>
     <hr>
-    <h2><a href="./movie-ranking.html">Movie Ranking projects</a></h2>
-    <img src="../assets/images/movie-ranking.png" height="200"/>
+    <h2><a href="./public/movie-ranking.html">Movie Ranking projects</a></h2>
+    <img src="./assets/images/movie-ranking.png" height="200"/>
 
-    <h2><a href="./birthday-invite.html">Birthday Invite project</a></h2>
-    <img src="../assets/images/birthday-invite.png" height="200"/>
+    <h2><a href="./public/birthday-invite.html">Birthday Invite project</a></h2>
+    <img src="./assets/images/birthday-invite.png" height="200"/>
 <hr>
-<a href="./about.html">About Me</a>
-<a href="./contact.html">Contact Me</a>
+<a href="./public/about.html">About Me</a>
+<a href="./public/contact.html">Contact Me</a>
 
 </body>
 </html>
